--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ai-writing-experiment-functions",
+  "name": "ai-writing-experiment",
   "version": "1.0.0",
-  "description": "Functions for the AI writing experiment",
+  "private": true,
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "jsonwebtoken": "^9.0.2"
   }
 }
